--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,13 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+html {
+  font-size: 10px;
+}
+
+body {
+  font-size: 1.6rem;
+}
+
+button {
+  cursor: pointer;
+}
